--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.6.3",
     "react": "^17.0.1",
+    "react-beautiful-dnd": "^10.0.4",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.2",
+    "styled-components": "^3.4.9",
+    "uuid": "^8.3.2",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
