--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "SAMSUN_BOT",
-  "name": "SAMSUN Robot",
+  "name": "SAMSUN Robot toy",
   "icons": [
     {
       "src": "/image/icon-256.png",
