--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.6.3",
+    "ace-builds": "^1.4.12",
     "react": "^17.0.1",
+    "react-ace": "^9.3.0",
     "react-beautiful-dnd": "^10.0.4",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
     "styled-components": "^3.4.9",
     "uuid": "^8.3.2",
