--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
+    "recoil": "^0.1.2",
     "styled-components": "^3.4.9",
     "uuid": "^8.3.2",
     "web-vitals": "^1.1.0"
