--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^17.0.1",
     "react-ace": "^9.3.0",
     "react-beautiful-dnd": "^10.0.4",
+    "react-blockly": "^6.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
